@@ -32,7 +32,7 @@ static char UNUSED rcsid[] = "$Id$";
 
 #include "events.h"
 
-#define MPI_EVENTS 81
+#define MPI_EVENTS 84
 static unsigned mpi_events[] = {
 	MPI_BSEND_EV, MPI_SSEND_EV, MPI_BARRIER_EV, MPI_BCAST_EV, MPI_SEND_EV,
 	MPI_RECV_EV, MPI_SENDRECV_EV, MPI_SENDRECV_REPLACE_EV, MPI_IBSEND_EV,
@@ -54,8 +54,9 @@ static unsigned mpi_events[] = {
 	MPI_COMM_CREATE_EV, MPI_COMM_DUP_EV, MPI_COMM_SPLIT_EV,
 	MPI_CART_CREATE_EV, MPI_CART_SUB_EV, MPI_COMM_FREE_EV,
 	MPI_COMM_SPAWN_EV, MPI_COMM_SPAWN_MULTIPLE_EV, MPI_REQUEST_GET_STATUS_EV,
-    MPI_REQUEST_GET_STATUS_COUNTER_EV, MPI_TIME_OUTSIDE_MPI_REQUEST_GET_STATUS_EV,
-	MPI_WIN_CREATE_EV, MPI_WIN_FENCE_EV, MPI_WIN_START_EV, MPI_WIN_FREE_EV
+	MPI_REQUEST_GET_STATUS_COUNTER_EV, MPI_TIME_OUTSIDE_MPI_REQUEST_GET_STATUS_EV,
+	MPI_WIN_CREATE_EV, MPI_WIN_FENCE_EV, MPI_WIN_START_EV, MPI_WIN_FREE_EV,
+	MPI_WIN_POST_EV, MPI_WIN_COMPLETE_EV, MPI_WIN_WAIT_EV
  };
 
 /******************************************************************************
